28732 made four column for grid on bp up to 1280

--- a/static-html/dev-html/partials-dev/index-page-template.html
+++ b/static-html/dev-html/partials-dev/index-page-template.html
@@ -60,7 +60,7 @@
                 1em/1.6em, Pragmatica Light, 300 weight.<br></p>
         </div>
     </div>
-    <div class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
+    <div class="row expanded small-collapse small-up-1 medium-up-3 xlarge-up-4 xxlarge-up-5 entityGrid">
         <div class="column">
             <!-- build:section blocks.gridItemBlog --><!-- /build -->
         </div>
