--- a/static-html/venue-list-page.html
+++ b/static-html/venue-list-page.html
@@ -302,7 +302,7 @@
                     </section>
 
 
-                    <section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
+                    <section class="row expanded small-collapse small-up-1 medium-up-3 xlarge-up-4 xxlarge-up-5 entityGrid">
                         <div class="column">
                             <div class="gridItem gridItem--element">
                                 <a href="#" class="js-touchFocus">
