--- a/static-html/dev-html/partials-dev/event-list-template.html
+++ b/static-html/dev-html/partials-dev/event-list-template.html
@@ -97,7 +97,7 @@
     </form>
 </section>
 
-<section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
+<section class="row expanded small-collapse small-up-1 medium-up-3 xlarge-up-4 xxlarge-up-5 entityGrid">
     <div class="column">
         <!-- build:section blocks.gridItemEvent --><!-- /build -->
     </div>
