--- a/static-html/event-list-page.html
+++ b/static-html/event-list-page.html
@@ -331,7 +331,7 @@
                         </form>
                     </section>
 
-                    <section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
+                    <section class="row expanded small-collapse small-up-1 medium-up-3 xlarge-up-4 xxlarge-up-5 entityGrid">
                         <div class="column">
                             <div class="gridItem gridItem--element">
                                 <a href="#" class="js-touchFocus">
