28716 fix navigation responsive behaviour, replace class show-for-large for style media rules

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -163,7 +163,7 @@
                                         </li>
                                     </ul>
                                 </nav>
-                                <nav class="show-for-large siteHeader-mainNav">
+                                <nav class="siteHeader-mainNav">
                                     <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left js-touchNav">
                                         <li class="has-subNav js-hasSubNav">
                                             <a href="#">About</a>
