--- a/static-html/venue-list-page.html
+++ b/static-html/venue-list-page.html
@@ -614,9 +614,13 @@
             });
         } catch (e) {}
     </script>
-    <script src="js/vendor.min.js"></script>
+
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="js/vendor/jquery-ui.min.js"></script>
     <script src="js/vendor/jquery.swipebox.min.js"></script>
+    <script src="js/vendor.min.js"></script>
     <script src="js/app.min.js"></script>
+
 </body>
 
 </html>
