28926 fix layout to not breake the page when sidebar content is longer than page content

--- a/htdocs/static-html/dev-html/partials-dev/artist-page-template.html
+++ b/htdocs/static-html/dev-html/partials-dev/artist-page-template.html
@@ -46,6 +46,16 @@
                     <!-- build:section blocks.swipeboxItem --><!-- /build -->
                     <!-- build:section blocks.swipeboxItem --><!-- /build -->
                     <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
+                    <!-- build:section blocks.swipeboxItem --><!-- /build -->
                 </ul>
                 <a href="#" class="btn btn--fullWidth">Artist WebSite</a>
             </div>
