--- a/htdocs/static-html/artist-page.html
+++ b/htdocs/static-html/artist-page.html
@@ -322,6 +322,56 @@
                                                 <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
                                             </a>
                                         </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
                                     </ul>
                                     <a href="#" class="btn btn--fullWidth">Artist WebSite</a>
                                 </div>
