28975 add jcf plugin for selects

--- a/htdocs/static-html/test-page.html
+++ b/htdocs/static-html/test-page.html
@@ -294,10 +294,17 @@
 
                                         <input type="text" placeholder="placeholder">
 
-                                        <select id="test" name="test">
+                                        <select id="test" name="test" multiple placeholder="placeholder">
                         <option value="SelectBoxIt is:">SelectBoxIt is:</option>
                         <option value="a jQuery Plugin">a jQuery Plugin</option>
                         <option value="a Select Box Replacement">a Select Box Replacement</option>
+                        <option value="a Stateful UI Widget">a Stateful UI Widget</option>
+                    </select>
+
+                                        <select name="test1" placeholder="placeholder">
+                        <option value="SelectBoxIt is2:">SelectBoxIt is:</option>
+                        <option value="a jQuery Plugin">a jQuery Plugin</option>
+                        <option value="a Select Box Replacement">Web sites are transforming from boring fields of Arial to embrace the gamut of typographical possibilities offered by web fonts.</option>
                         <option value="a Stateful UI Widget">a Stateful UI Widget</option>
                     </select>
                                     </div>
