29168 on section page made last col aligned to left

--- a/htdocs/static-html/dev-html/partials-dev/section-landing.html
+++ b/htdocs/static-html/dev-html/partials-dev/section-landing.html
@@ -31,7 +31,7 @@
             <div class="halfMedium-6 column">
                 <!-- build:section blocks.promoBox --><!-- /build -->
             </div><!--   promoList-item  -->
-            <div class="halfMedium-6 column">
+            <div class="halfMedium-6 column end">
                 <!-- build:section blocks.promoBox --><!-- /build -->
             </div><!--   promoList-item  -->
         </section>
