--- a/htdocs/static-html/section-page.html
+++ b/htdocs/static-html/section-page.html
@@ -314,7 +314,7 @@
 
                                 </div>
                                 <!--   promoList-item  -->
-                                <div class="halfMedium-6 column">
+                                <div class="halfMedium-6 column end">
                                     <div class="promoList-item">
                                         <a href="#" class="js-touchFocus">
                                             <div class="promoList-item-image">
